# MikuMikuPenguin

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.en.md  CONTRIBUTING.md  COPYING  ChangeLog  Doxyfile  Makefile.am  Makefile.in  README  README.en.md  README.md  autotools.gitignore  configure  configure.ac
cmake/: FindGLFW.cmake  FindGLM.cmake  FindSOIL.cmake
data/qml/: BezierCanvas.qml  Drawer.qml  FlickableGrid.qml  FlickableRow.qml  FlipablePanel.qml  Panel.qml  PanelButton.qml  PanelTab.qml  main.qml
data/share/: Makefile.am  Makefile.in
demos/PMXViewer/: viewer.cpp
doc/: Link to Makefile.am  Makefile.am  Makefile.am~  Makefile.in  On VMD Interpolation Parameters.txt~  VmdMotionController.cpp~
doc/DevDocs/: On VMD Interpolation Parameters.txt  VmdMotionController.cpp  character_utf8.txt  ik.cpp  ikx.cpp  motioncontroller.txt
include/: Makefile.am  Makefile.am~  Makefile.in  bulletdebugdrawer.h  bulletphysics.h  interpolation.h  libmmp.h  mmdphysics.h  motioncontroller.h  pmx.h  shader.h  vmd.h
libmmp/: CMakeLists.txt  Makefile.am  Makefile.am~  Makefile.in  bulletdebugdrawer.cpp  bulletphysics.cpp  glm_helper.cpp  glm_helper.h  mmdphysics.cpp  motioncontroller.cpp  pmx.cpp  shader.cpp  texthandle.cpp  vmd.cpp
man/: Makefile.am  Makefile.in  pmx.1
scripts/: Makefile.in
shaders/: Makefile.am  Makefile.in  bulletDebug.frag  bulletDebug.vert  model.frag  model.vert
src/: CMakeLists.txt  Makefile.am  Makefile.am~  Makefile.in  QTEDITOR_README.md  dummysound.cpp  fboinsgrenderer.cpp  fboinsgrenderer.h  logorenderer.cpp  logorenderer.h  main.cpp  openglscene.cpp  openglscene.h  qt-editor.pro  sound.cpp  viewer.cpp  viewer.h
src/qml/: DrawerButton.qml  main.qml
test/: Makefile.am  glm_helper_test.cpp  minunit.h
